# document-hub

development/: Dockerfile  build-environment.sh  development.sh  docker-compose.yml
development/docker/mongodb/docker-entrypoint-initdb.d/: 00_create_application_user.js
development/docker/nginx/conf.d/: app.conf
src/: .env  .env.example  Dockerfile  api.py  pyproject.toml
src/app/: configuration.py  dependency_container.py
src/config/: app.py  databases.py
